Extension content script is appending markers to user elements on reddit

--- a/client/options/options.html
+++ b/client/options/options.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-  <h1>Dysis Options</h1>
+  <h1>Dysis Options X</h1>
 </body>
 <script src="options.js"></script>
 </html>
