--- a/client/popup/popup.html
+++ b/client/popup/popup.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  
+  <h1>Dysis</h1>
 </body>
 <script src="popup.js"></script>
 </html>
