--- a/client-ts/design.html
+++ b/client-ts/design.html
@@ -26,6 +26,13 @@
     margin: 5px;
   }
 
+  .dysis-text {
+    background-color: black;
+    color: white;
+    padding: 2px 12px;
+    border-radius: 8px 8px 8px 8px;
+  }
+
   .dysis-tag-left {
     padding: 2px 12px;
     border-radius: 8px 0px 0px 8px;
@@ -88,6 +95,8 @@
 </style>
 <body>
   <div class="dysis-tag-container">
+    <span class="dysis-tag"><span class="dysis-text">dysis</span></span>
+
     <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-behavior">toxicity</span><span class="dysis-tag-right dysis-tag-behavior-red">72%</span></span>
     <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-behavior">threat</span><span class="dysis-tag-right dysis-tag-behavior-green">32%</span></span>
     <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-behavior">insult</span><span class="dysis-tag-right dysis-tag-behavior-yellow">28%</span></span>
