DOC README.md added and updated

--- a/client/design.html
+++ b/client/design.html
@@ -101,12 +101,12 @@
     <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-behavior">threat</span><span class="dysis-tag-right dysis-tag-behavior-green">32%</span></span>
     <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-behavior">insult</span><span class="dysis-tag-right dysis-tag-behavior-yellow">28%</span></span>
 
-    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-interests">politic</span><span class="dysis-tag-right dysis-tag-interests">23 x</span></span>
-    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-interests">de</span><span class="dysis-tag-right dysis-tag-interests">45 x</span></span>
-    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-interests">cuteAnimals</span><span class="dysis-tag-right dysis-tag-interests">45 x</span></span>
+    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-interests">politic</span><span class="dysis-tag-right dysis-tag-interests">23x</span></span>
+    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-interests">de</span><span class="dysis-tag-right dysis-tag-interests">45x</span></span>
+    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-interests">cuteAnimals</span><span class="dysis-tag-right dysis-tag-interests">45x</span></span>
 
-    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-metrics">total posts</span><span class="dysis-tag-right dysis-tag-metrics">82 x</span></span>
-    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-metrics">total comments</span><span class="dysis-tag-right dysis-tag-metrics">41</span></span>
+    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-metrics"># of total posts</span><span class="dysis-tag-right dysis-tag-metrics">82</span></span>
+    <span class="dysis-tag"><span class="dysis-tag-left dysis-tag-metrics"># of total comments</span><span class="dysis-tag-right dysis-tag-metrics">41</span></span>
   </div>
 </body>
 </html>
